hphp/hack/test/typecheck/deprecated_fun.php
<?hh

<<__Deprecated('use bar() instead')>>
function foo() {}

function f() {
  foo();
}
